--- a/Hemo-Group/src/Components/Navbar/Navbar.css
+++ b/Hemo-Group/src/Components/Navbar/Navbar.css
@@ -1,126 +1,178 @@
-header{
+.bottom-nav {
+  display: flex;
+  width: 393px;
+  padding-top: 41px;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  border-radius: 24px;
+  background: #f5f6f7;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  position: fixed; /* Fija el navbar en la parte inferior */
+  bottom: 0; /* Alinea en la parte inferior de la ventana */
+  left: 50%; /* Centra el navbar */
+  transform: translateX(-50%); /* Ajuste fino para centrar exactamente */
+  z-index: 10; /* Asegura que el navbar esté por encima de otros elementos */
+}
+
+.contenedor-logos {
+  display: none;
+}
+
+.li-mobile-p {
+  display: none;
+}
+
+.menu-list {
+  display: flex;
+  padding: 12px 16px;
+  justify-content: space-around;
+  align-items: center;
+  background: #fff;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.menu-5 {
+  width: 135px;
+  height: 5px;
+  margin-top: 10px;
+  align-self: center;
+}
+
+.menu {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 6px;
+  flex: 1 0 auto;
+}
+
+.frame {
+  display: flex;
+  padding: 8px 12px;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  text-decoration: none;
+  border-radius: 100px;
+  transition: all 0.3s ease; /* Transición suave para todos los cambios */
+
+  i {
+    color: #484c52 !important;
+    width: 30px;
+    height: 30px;
+    font-size: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: transform 0.9s ease; /* Transición para la transformación del ícono */
+  }
+}
+
+.frame:hover {
+  background-color: #0084a54a;
+
+  i {
+    color: #0083a5!important; /* Cambia el color del ícono */
+  }
+
+  .li-mobile-p{
+    color: #0083a5;
+  }
+}
+
+
+/* Estilos para dispositivos móviles */
+@media (max-width: 768px) {
+  .bottom-nav {
     width: 100%;
+    padding-top: 20px; /* Reducción del padding superior */
+  }
+
+  .menu-list {
+    padding: 8px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .bottom-nav {
+    width: 90%; /* Un poco más estrecho para tablets */
+    padding-top: 30px; /* Ajuste del padding superior */
+    border-radius: 20px; /* Suaviza el radio del borde */
+  }
+
+  .menu-list {
+    justify-content: space-between; /* Espaciado entre elementos */
+  }
+
+  .menu {
+    padding: 5px; /* Ajuste del padding para los elementos del menú */
+  }
+
+  .frame {
+    padding: 6px 10px; /* Ajuste del padding para los frames */
+  }
+}
+
+@media (min-width: 1024px) {
+  .bottom-nav {
+    width: 100%; /* Ajusta el ancho para ocupar toda la pantalla */
+    height: 10%;
+    left: 0; /* Alinea a la izquierda */
+    transform: translateX(
+      0
+    ); /* Elimina la transformación ya que ya no es necesaria */
+    position: fixed; /* Fija el navbar en la parte inferior */
+    top: 0; /* Alinea en la parte inferior de la ventana */
+    left: 50%; /* Centra el navbar */
+    transform: translateX(-50%); /* Ajuste fino para centrar exactamente */
+    z-index: 1000; /* Asegura que el navbar esté por encima de otros elementos */
+  }
+
+  .contenedor-logos {
     display: flex;
-    justify-content: space-between;
-    padding: 7px 15px;
-    position: absolute;
-    top: 0;
-    z-index: 9;
-    box-shadow: 0 0 3px rgb(169, 169, 169);
-    background-color: white;
-}
-
-.logoContainer{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 10px;
-}
-
-.logoContainer > img{
-    width: 90px;
-}
-
-.logoContainer > img:nth-child(2){
-    margin-top: 18px;
-    width: 200px;
-}
-
-.nav{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    gap: 10px;
-}
-
-.header-li{
-    list-style: none;
-    padding: 6px;
-    border-radius: 5px;
-    transition: 0.3s all ease;
-    border: 1px solid rgb(156, 156, 156);
-}
-
-.header-li > a{
-    text-decoration: none;
-    color: black;
-}
-
-@media screen and (max-width: 466px) {
-    .logoContainer > img:nth-child(2){
-        display: none;
-    }
-}
-
-.cerrarSesion{
-    background: none;
-    border: none;
-    cursor: pointer;
-    width: 21px;
-    height: 21px;
-    display: flex;
+    width: 5%;
     justify-content: center;
     align-items: center;
+    gap: 10px;
+  }
+
+  .li-mobile-p {
+    display: block;
+    font-size: 1em;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 16px;
+    color: #484c52;
+  }
+
+  .menu-list {
+    padding: 5px;
+  }
 }
 
-/* Añade este código al final de tu archivo CSS */
+@media (min-width: 300px) and (max-width: 800px) {
+  .bottom-nav {
+    width: 100%; /* Ajusta el ancho para ocupar toda la pantalla */
+    padding-top: 15px; /* Ajusta el padding superior */
+    border-radius: 10px; /* Suaviza el radio del borde */
+    /* Aquí puedes añadir otros ajustes específicos para este rango de pantalla */
+  }
 
-@media screen and (max-width: 576px) {
-    .burger-menu {
-        font-size: 32px;
-    }
+  .menu-list {
+    padding: 5px; /* Ajusta el padding */
+    /* Otros ajustes para .menu-list */
+  }
 
-    .nav {
-        display: none;
-        flex-direction: column;
-        position: absolute;
-        top: 60px;
-        left: 0;
-        width: 100%;
-        background-color: white;
-        box-shadow: 0 0 3px rgb(169, 169, 169);
-    }
+  .menu {
+    /* Ajustes para .menu */
+  }
 
-    .nav.show-menu {
-        display: flex;
-        padding: 10px 0;
-    }
+  .frame {
+    padding: 4px 8px; /* Ajusta el padding para los frames */
+    /* Otros ajustes para .frame */
+  }
 
-    .header-li {
-        width: 97%;
-        text-align: center;
-        padding: 10px;
-        margin: 0 10px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .CarritoBtn{
-        width: 97%;
-        padding: 10px;
-        height: auto;
-    }
-}
-
-.LogosEmpresaContainers{
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-}
-
-.reciboLogo{
-    width: 60px;
-}
-
-.localLogo{
-    border-radius: 50%;
-}
-
-@media screen and (min-width: 577px) {
-    .burger-menu {
-        display: none;
-    }
+  /* Ajustes adicionales que puedas necesitar */
 }
