--- a/Hemo-Group/src/Screens/Home/Home.css
+++ b/Hemo-Group/src/Screens/Home/Home.css
@@ -1,5 +1,12 @@
+.container {
+  width: 100%;
+  height: 100vh;
+  margin-top: 110px;
+}
+
+
 .quienes-somos-section {
-  background-color: rgba(255, 255, 255, 0.87);
+  background-color: rgba(236, 236, 236, 0.87);
   background-size: cover;
   padding: 40px 0;
   text-align: center;
